BE/error/src/main/java/com/example/demo/common/support/dto/AbstractResponseDto.java
package com.example.demo.common.support.dto;

public interface AbstractResponseDto extends AbstractDto {}
